# mypythonlibrary

./: README.rst  pyproject.toml  setup.cfg
