[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name = "pkg"
description = "description"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = {text = "MIT License"}
requires-python = ">=3.7, <4"
dependencies = [
    "requests",
    "importlib-metadata",
    "numpy",
]
dynamic = ["version", "readme"]

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

# [project.scripts]
# console_scripts = "my_package.module:function"

[tool.setuptools.dynamic]
# version = {attr = "pkg.VERSION"}
readme = {file = ["README.rst"]}

[tools.setuptools.packages.find]
# where = ["src"] 
exclude = [
    "examples*",
    "tools*",
    "docs*",
    "test*",
]


[tool.pyright]
include = ["pkg"]


# setuptools_scm extract Python package versions from 
# git or hg metadata instead of declaring them as the 
# version argument or in a SCM managed file.
[tool.setuptools_scm]
