[metadata]
name = mypythonlibrabry
version = 0.0.0
description = My package description
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
# include_package_data = True
# package_dir=   #used for src/ layout
#     =src
packages = find:
python_requires = >=3.7, <4
install_requires =
    requests
    importlib-metadata


[options.package_data]
* = *.txt, *.rst

# [options.entry_points]
# console_scripts =
#     executable-name = my_package.module:function

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
# where=src   #used for src/ layout
